[package]
name = "ojigineko-life"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.40"
chrono = {version = "0.4.19", features = ["serde"]}
num = "0.4.0"
rand = "0.8.3"
serde = "1.0.126"
serde_json = "1.0.64"
slack-hook = "0.8.0"
